# TooMuchToDo

./: .gitignore
.github/workflows/: master_toomuchtodobackend.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/src/: app.py  development-database.db  test-database.db
backend/src/auth/: firebase_auth.py
backend/src/decorators/: verify_firebase_id_token.py  verify_firebase_token_path_parameter.py  verify_firebase_token_request_body.py
backend/src/logic/: convert_query_string_filter_by_to_dict.py  site_statistics.py  to_dos.py  user.py
backend/src/logic/site_statistics/: site_statistics.py
backend/src/logic/to_do/: order_by_to_dos.py
backend/src/logic/user/: delete_profile_picture.py  delete_user_profile.py  update_profile_picture_manager.py  update_user_profile.py  upload_profile_picture.py
backend/src/models/: models.py
backend/src/models/marshmallow/schemas/: ma_schemas.py
backend/src/models/migrations/versions/: 37be8968db0a_removed_password_column.py  5192a09649d0_added_column_for_email_verification.py
backend/src/routes/: auth.py  public.py  to_do.py  user.py
backend/src/utils/azure/: blob_storage.py
backend/src/utils/google/: firebase.py  firebase_auth_client.py
backend/src/utils/mappers/: user_mapper.py
backend/src/utils/sql/: database_crud.py  insert_update.py
backend/tests/: client.py  test_app.py
backend/tests/test_decorators/: test_verify_firebase_id_token.py  test_verify_firebase_token_path_parameter.py
backend/tests/test_logic/: test_convert_query_string_filter_by_to_dict.py  test_site_statistics.py  test_to_dos.py
backend/tests/test_routes/: test_auth.py  test_public.py  test_to_do.py  test_user.py
backend/tests/test_utils/test_azure/: test_blob_storage.py
backend/tests/test_utils/test_sql/: test_insert_update.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/api/: axios.js
frontend/src/app/: store.js
frontend/src/auth/: PersistLogin.js  RequireAuth.js
frontend/src/components/: AppContainer.js
frontend/src/utils/: loginAlertMapper.js  theme.js  (+2 more)
(+37 files in other folders)
